sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:9: error: ';' expected but ')' found.
			if (plusPetitQue(i, i+1)) echange(i, i+j)) flag = true;
                                                                 ^